add forget reset password and admin can delete book and course