@@ -5,6 +5,7 @@ import com.coursify.domain.User;
 import com.coursify.dto.request.UserUpdateRequest;
 import com.coursify.dto.response.UserResponse;
 import com.coursify.exception.ResourceNotFoundException;
+import com.coursify.repository.EnrollmentRepository;
 import com.coursify.repository.UserRepository;
 import com.coursify.service.UserService;
 import lombok.RequiredArgsConstructor;
@@ -12,13 +13,13 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class UserServiceImpl implements UserService {
 
     private final UserRepository userRepository;
+    private final EnrollmentRepository enrollmentRepository;
 
     @Override
     public UserResponse getUserById(Long id) {
@@ -33,19 +34,26 @@ public class UserServiceImpl implements UserService {
 
     @Override
     public List<UserResponse> getAllUsers() {
-        return userRepository.findAll().stream().map(this::toResponse).collect(Collectors.toList());
+        return userRepository.findAll().stream()
+                .map(this::toResponse)
+                .toList();
     }
 
     @Override
     public List<UserResponse> getUsersByRole(String role) {
         Role r = Role.valueOf(role.toUpperCase());
-        return userRepository.findAllByRole(r).stream().map(this::toResponse).collect(Collectors.toList());
+        return userRepository.findAllByRole(r).stream()
+                .map(this::toResponse)
+                .toList();
     }
 
     @Override
     @Transactional
     public void deleteUser(Long id) {
-        if (!userRepository.existsById(id)) throw new ResourceNotFoundException("User", id);
+        if (!userRepository.existsById(id)) {
+            throw new ResourceNotFoundException("User", id);
+        }
+        enrollmentRepository.deleteAllByStudentId(id);
         userRepository.deleteById(id);
     }
 
@@ -55,7 +63,6 @@ public class UserServiceImpl implements UserService {
         User user = userRepository.findById(userId)
                 .orElseThrow(() -> new ResourceNotFoundException("User", userId));
 
-        // update fields if not null
         if (request.getFirstName() != null) user.setFirstName(request.getFirstName());
         if (request.getLastName() != null) user.setLastName(request.getLastName());
         if (request.getImageUrl() != null) user.setImageUrl(request.getImageUrl());
